grammar/src/lexer/snapshots/grammar__lexer__build__tests__longest_match.snap
---
source: grammar/src/lexer/build.rs
expression: "(char_intervals.iter().enumerate().collect::<Vec<_>>(), nfa, dfa)"
---
(
    [
        (
            0,
            0,
        ),
        (
            1,
            48,
        ),
        (
            2,
            58,
        ),
        (
            3,
            65,
        ),
        (
            4,
            91,
        ),
        (
            5,
            95,
        ),
        (
            6,
            96,
        ),
        (
            7,
            97,
        ),
        (
            8,
            102,
        ),
        (
            9,
            103,
        ),
        (
            10,
            105,
        ),
        (
            11,
            106,
        ),
        (
            12,
            110,
        ),
        (
            13,
            111,
        ),
        (
            14,
            116,
        ),
        (
            15,
            117,
        ),
        (
            16,
            123,
        ),
    ],
    Nfa {
        transitions: {
            (
                State(0),
                Some(
                    10,
                ),
            ): {
                State(1),
                State(3),
                State(6),
            },
            (
                State(1),
                Some(
                    8,
                ),
            ): {
                State(2),
            },
            (
                State(3),
                Some(
                    12,
                ),
            ): {
                State(4),
            },
            (
                State(4),
                Some(
                    14,
                ),
            ): {
                State(5),
            },
            (
                State(0),
                Some(
                    7,
                ),
            ): {
                State(6),
            },
            (
                State(0),
                Some(
                    8,
                ),
            ): {
                State(6),
            },
            (
                State(0),
                Some(
                    9,
                ),
            ): {
                State(6),
            },
            (
                State(0),
                Some(
                    11,
                ),
            ): {
                State(6),
            },
            (
                State(0),
                Some(
                    12,
                ),
            ): {
                State(6),
            },
            (
                State(0),
                Some(
                    13,
                ),
            ): {
                State(6),
            },
            (
                State(0),
                Some(
                    14,
                ),
            ): {
                State(6),
            },
            (
                State(0),
                Some(
                    15,
                ),
            ): {
                State(6),
            },
            (
                State(0),
                Some(
                    3,
                ),
            ): {
                State(6),
            },
            (
                State(0),
                Some(
                    5,
                ),
            ): {
                State(6),
            },
            (
                State(6),
                None,
            ): {
                State(7),
            },
            (
                State(7),
                Some(
                    1,
                ),
            ): {
                State(8),
            },
            (
                State(7),
                Some(
                    7,
                ),
            ): {
                State(8),
            },
            (
                State(7),
                Some(
                    8,
                ),
            ): {
                State(8),
            },
            (
                State(7),
                Some(
                    9,
                ),
            ): {
                State(8),
            },
            (
                State(7),
                Some(
                    10,
                ),
            ): {
                State(8),
            },
            (
                State(7),
                Some(
                    11,
                ),
            ): {
                State(8),
            },
            (
                State(7),
                Some(
                    12,
                ),
            ): {
                State(8),
            },
            (
                State(7),
                Some(
                    13,
                ),
            ): {
                State(8),
            },
            (
                State(7),
                Some(
                    14,
                ),
            ): {
                State(8),
            },
            (
                State(7),
                Some(
                    15,
                ),
            ): {
                State(8),
            },
            (
                State(7),
                Some(
                    3,
                ),
            ): {
                State(8),
            },
            (
                State(7),
                Some(
                    5,
                ),
            ): {
                State(8),
            },
            (
                State(8),
                None,
            ): {
                State(7),
            },
        },
        state_letters: {
            State(0): {
                10,
                7,
                8,
                9,
                11,
                12,
                13,
                14,
                15,
                3,
                5,
            },
            State(1): {
                8,
            },
            State(3): {
                12,
            },
            State(4): {
                14,
            },
            State(7): {
                1,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                3,
                5,
            },
        },
        accept_states: {
            State(2): (
                18446744073709551604,
                TokenId(
                    0,
                ),
            ),
            State(5): (
                18446744073709551589,
                TokenId(
                    1,
                ),
            ),
            State(7): (
                18446744073709551573,
                TokenId(
                    2,
                ),
            ),
        },
    },
    Dfa {
        start: 0,
        transitions: {
            (
                State(0),
                10,
            ): State(1),
            (
                State(0),
                7,
            ): State(2),
            (
                State(0),
                8,
            ): State(2),
            (
                State(0),
                9,
            ): State(2),
            (
                State(0),
                11,
            ): State(2),
            (
                State(0),
                12,
            ): State(2),
            (
                State(0),
                13,
            ): State(2),
            (
                State(0),
                14,
            ): State(2),
            (
                State(0),
                15,
            ): State(2),
            (
                State(0),
                3,
            ): State(2),
            (
                State(0),
                5,
            ): State(2),
            (
                State(1),
                8,
            ): State(3),
            (
                State(1),
                12,
            ): State(4),
            (
                State(1),
                1,
            ): State(5),
            (
                State(1),
                7,
            ): State(5),
            (
                State(1),
                9,
            ): State(5),
            (
                State(1),
                10,
            ): State(5),
            (
                State(1),
                11,
            ): State(5),
            (
                State(1),
                13,
            ): State(5),
            (
                State(1),
                14,
            ): State(5),
            (
                State(1),
                15,
            ): State(5),
            (
                State(1),
                3,
            ): State(5),
            (
                State(1),
                5,
            ): State(5),
            (
                State(2),
                1,
            ): State(5),
            (
                State(2),
                7,
            ): State(5),
            (
                State(2),
                8,
            ): State(5),
            (
                State(2),
                9,
            ): State(5),
            (
                State(2),
                10,
            ): State(5),
            (
                State(2),
                11,
            ): State(5),
            (
                State(2),
                12,
            ): State(5),
            (
                State(2),
                13,
            ): State(5),
            (
                State(2),
                14,
            ): State(5),
            (
                State(2),
                15,
            ): State(5),
            (
                State(2),
                3,
            ): State(5),
            (
                State(2),
                5,
            ): State(5),
            (
                State(3),
                1,
            ): State(5),
            (
                State(3),
                7,
            ): State(5),
            (
                State(3),
                8,
            ): State(5),
            (
                State(3),
                9,
            ): State(5),
            (
                State(3),
                10,
            ): State(5),
            (
                State(3),
                11,
            ): State(5),
            (
                State(3),
                12,
            ): State(5),
            (
                State(3),
                13,
            ): State(5),
            (
                State(3),
                14,
            ): State(5),
            (
                State(3),
                15,
            ): State(5),
            (
                State(3),
                3,
            ): State(5),
            (
                State(3),
                5,
            ): State(5),
            (
                State(4),
                14,
            ): State(6),
            (
                State(4),
                1,
            ): State(5),
            (
                State(4),
                7,
            ): State(5),
            (
                State(4),
                8,
            ): State(5),
            (
                State(4),
                9,
            ): State(5),
            (
                State(4),
                10,
            ): State(5),
            (
                State(4),
                11,
            ): State(5),
            (
                State(4),
                12,
            ): State(5),
            (
                State(4),
                13,
            ): State(5),
            (
                State(4),
                15,
            ): State(5),
            (
                State(4),
                3,
            ): State(5),
            (
                State(4),
                5,
            ): State(5),
            (
                State(5),
                1,
            ): State(5),
            (
                State(5),
                7,
            ): State(5),
            (
                State(5),
                8,
            ): State(5),
            (
                State(5),
                9,
            ): State(5),
            (
                State(5),
                10,
            ): State(5),
            (
                State(5),
                11,
            ): State(5),
            (
                State(5),
                12,
            ): State(5),
            (
                State(5),
                13,
            ): State(5),
            (
                State(5),
                14,
            ): State(5),
            (
                State(5),
                15,
            ): State(5),
            (
                State(5),
                3,
            ): State(5),
            (
                State(5),
                5,
            ): State(5),
            (
                State(6),
                1,
            ): State(5),
            (
                State(6),
                7,
            ): State(5),
            (
                State(6),
                8,
            ): State(5),
            (
                State(6),
                9,
            ): State(5),
            (
                State(6),
                10,
            ): State(5),
            (
                State(6),
                11,
            ): State(5),
            (
                State(6),
                12,
            ): State(5),
            (
                State(6),
                13,
            ): State(5),
            (
                State(6),
                14,
            ): State(5),
            (
                State(6),
                15,
            ): State(5),
            (
                State(6),
                3,
            ): State(5),
            (
                State(6),
                5,
            ): State(5),
        },
        accept_states: {
            State(1): TokenId(
                2,
            ),
            State(2): TokenId(
                2,
            ),
            State(3): TokenId(
                0,
            ),
            State(4): TokenId(
                2,
            ),
            State(5): TokenId(
                2,
            ),
            State(6): TokenId(
                1,
            ),
        },
    },
)
